# 3d-ring

./: .dvcignore  .gitignore  .pre-commit-config.yaml  README.md  data.dvc  env.example  models.dvc  pyproject.toml
.dvc/: config
backend/: Dockerfile  app.py  git.keep  requirements.txt
data/: clear.dvc
data/scripts/: upload.py
frontend/: Dockerfile  frontend.py  requirements.txt
inference/: infr.py
infra/: docker-compose.yaml
infra/airflow/: Dockerfile  generate_json.py  inits.sh
infra/airflow/dags/: train_openlrm_dag.py
infra/minio/inits/: minio_init.sh
infra/postgres/init/: init_airflow.sql
infra/prometheus/: prometheus.yml
