[project]
name = "ring-to-3d"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # "openlrm @ git+https://github.com/3DTopia/OpenLRM.git@v1.1.1",
    "accelerate==0.27.0",
    "diffusers>=0.37.0",
    "dvc[s3]>=3.66.1",
    "fastapi>=0.135.1",
    "hy3dgen>=2.0.2",
    "hydra-core>=1.3.2",
    "matplotlib>=3.10.8",
    "mlflow>=3.10.0",
    "opencv-python>=4.13.0.92",
    "optimum[onnx]>=2.1.0",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings==2.2.0",
    "tensorboard>=2.20.0",
    "transformers>=4.57.6",
    "uvicorn>=0.41.0",
    "torchvision",
    "torch==2.8.0",
    "boto3>=1.42.19",
    "ben2",
    "streamlit==1.55.0",
    "pyvista>=0.47.1",
    "trimesh>=4.11.3",
    "pyvistaqt>=0.11.3",
    "plotly>=6.6.0",
]

[dependency-groups]
airflow = [
    "apache-airflow==2.9.3",
    "apache-airflow-providers-amazon==8.27.0",
    "apache-airflow-providers-postgres==5.11.3",
]
dev = [
    "black>=25.12.0",
    "flake8>=7.3.0",
    "isort>=7.0.0",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "sphinx>=9.1.0",
]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | frontend
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.flake8]
max-line-length = 88
extend-ignore = "E203, W503"
exclude = [
  ".git",
  "__pycache__",
  ".venv",
  "venv",
  "frontend",
  "build",
  "dist",
  "*.egg-info",
]

[tool.uv.sources]
ben2 = { git = "https://github.com/PramaLLC/BEN2.git" }
